--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,10 @@
- html {
+*, *::before, *::after {
+     -moz-box-sizing: border-box;
+     -webkit-box-sizing: border-box;
+     box-sizing: border-box;
+ } 
+
+html {
      height: 100%; /* makes sure our HTML takes up 100% of the browser window */
      font-size: 100%;
  }
@@ -48,3 +54,58 @@
      letter-spacing: 0.5rem;         /* puts 0.5 root ems worth of space between each letter */
      text-shadow: 1px 1px 0px rgb(58,23,63); /* creates a shadow underneath the text for readability over the image */
  }
+
+.selling-points {
+     position: relative;
+     display: table;
+     width: 100%;
+ }
+ 
+ .point {
+     display: table-cell;
+     position: relative;
+     width: 33.3%;
+     padding: 2rem;
+     text-align: center;
+ }
+ 
+ .point .point-title {
+     font-size: 1.25rem;
+ }
+ 
+ .ion-music-note,
+ .ion-radio-waves,
+ .ion-iphone {
+     color: rgb(233,50,117);
+     font-size: 5rem;
+ }
+
+.container {
+     margin: 0 auto;
+     max-width: 64rem;
+ }
+
+ /* Medium and small screens (640px) */
+ @media (min-width: 640px) {
+      html { font-size: 112%; }
+   /* Style information will go here */
+ }
+ 
+.column {
+         float: left;
+         padding-left: 1rem;
+         padding-right: 1rem;
+     }
+ 
+     .column.full { width: 100%; }
+     .column.two-thirds { width: 66.7%; }
+     .column.half { width: 50%; }
+     .column.third { width: 33.3%; }
+     .column.fourth { width: 25%; }
+     .column.flow-opposite { float: right; }  
+
+ /* Large screens (1024px) */
+ @media (min-width: 1024px) {
+     html { font-size: 120%; }
+   /* Style information will go here */
+ }  
